[tool.poetry]
name = "nescient"
version = "0.1.0"
description = ""
authors = ["David Freifeld <freifeld.david@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "^1.10.2"
torchvision = "^0.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^3.0.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
